--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </main>
     <footer>
         <P>
-            Copyright 2023
+            Copyright 2023 Unrivaled
         </P>
     </footer>
 </body>
